Header Footer z-index fixes

--- a/our-brothers-web/src/app/components/footer/footer.component.scss
+++ b/our-brothers-web/src/app/components/footer/footer.component.scss
@@ -160,6 +160,7 @@ $mobileBreakpoint: 1000px;
   @media only screen and (max-width: $mobileBreakpoint) {
     display: flex;
     position: fixed;
+    z-index: 2;
     bottom: 0;
     left: 0;
     right: 0;
