--- a/our-brothers-web/src/app/components/header/header.component.scss
+++ b/our-brothers-web/src/app/components/header/header.component.scss
@@ -8,7 +8,7 @@ $mobileBreakpoint: 1200px;
   display: flex;
   align-items: center;
   background-color: white;
-  z-index: 2;
+  z-index: 3;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   padding: 1em 100px;
 
@@ -171,7 +171,7 @@ $mobileBreakpoint: 1200px;
     .nav-toggle {
       display: inline-block;
       position: absolute;
-      z-index: 1;
+      z-index: 4;
     }
 
     .header {
@@ -183,6 +183,7 @@ $mobileBreakpoint: 1200px;
 
         width: 300px;
         position: fixed;
+        z-index: 3;
         top: 0;
         right: 0;
         bottom: 0;
